kubernetes/apps/default/node-dev-frontend/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-dev-frontend
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    hajimari.io/enable: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~ "^/(.*)" {
        proxy_pass http://192.168.50.32:8000;
        proxy_set_header Host $host;
        proxy_set_header X-Forwarded-Proto https;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: &host "www.${SECRET_DOMAIN}"
  tls:
    - hosts:
        - *host
